# agent_cli_to_agent_cli

./: .gitignore  AGENTS.md  README.md  TODO.md  cli_clients.py  main.py  main_single_agent.py  sandbox_game.py
backend/: pyproject.toml
backend/src/: main.py  sandbox_game.py  sandbox_simulation.py  serve.py  two_agent_demo.py
backend/src/backend/: __init__.py  main.py  sandbox_simulation.py  serve.py
backend/src/sandbox_backend/: serve.py
frontend/: index.html  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
tests/: test_mock_backend.py
