[project]
name = "sandbox-backend"
version = "0.1.0"
description = "FastAPI backend for the sandbox agent simulation."
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pyautogen>=0.10.0",
]

[project.scripts]
serve = "sandbox_backend.serve:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.uv]
package = true
