[project]
name = "sandbox-backend"
version = "0.1.0"
description = "FastAPI backend for the sandbox agent simulation."
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pyautogen>=0.10.0",
]

[project.scripts]
serve = "serve:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main", "sandbox_simulation", "serve"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
