[project]
name = "sandbox-backend"
version = "0.1.0"
description = "FastAPI backend for the sandbox agent simulation."
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pyautogen>=0.10.0",
  "pytest-asyncio>=0.24.0",
]

[project.scripts]
serve = "serve:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
  "cli_clients",
  "main",
  "sandbox_game",
  "sandbox_simulation",
  "serve",
  "single_agent_demo",
  "two_agent_demo",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]
